just before adding redis
